// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List: Component should render card with draft state 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Card
        headerComponent={
          <FormattedMessage
            defaultMessage="Draft"
            id="dataSource.list.draft"
            values={Object {}}
          />
        }
      >
        <H1
          customStyles={
            Object {
              "color": "#a6a7aa",
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span
              isLock={true}
            >
              <CsvIcon
                customStyles={
                  Object {
                    "fill": "#a6a7aa",
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span
              isLock={true}
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span
              isLock={true}
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Card>
    </styled.li>
  </styled.div>
  <Button
    customStyles={
      Object {
        "backgroundColor": "#a6a7aa",
        "bottom": "10px",
        "height": "60px",
        "position": "fixed",
        "right": "10px",
      }
    }
    onClick={[Function]}
  >
    <PlusIcon />
  </Button>
</styled.div>
`;

exports[`List: Component should render card with error state 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Card
        headerComponent={
          <FormattedMessage
            defaultMessage="Error"
            id="dataSource.list.error"
            values={Object {}}
          />
        }
      >
        <H1
          customStyles={
            Object {
              "color": "#a6a7aa",
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
      </Card>
    </styled.li>
  </styled.div>
  <Button
    customStyles={
      Object {
        "backgroundColor": "#a6a7aa",
        "bottom": "10px",
        "height": "60px",
        "position": "fixed",
        "right": "10px",
      }
    }
    onClick={[Function]}
  >
    <PlusIcon />
  </Button>
</styled.div>
`;

exports[`List: Component should render card with processing state 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Card
        headerComponent={
          <FormattedMessage
            defaultMessage="Loading..."
            id="dataSource.list.processing"
            values={Object {}}
          />
        }
      >
        <H1
          customStyles={
            Object {
              "color": "#a6a7aa",
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span
              isLock={true}
            >
              <CsvIcon
                customStyles={
                  Object {
                    "fill": "#a6a7aa",
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span
              isLock={true}
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span
              isLock={true}
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Card>
    </styled.li>
  </styled.div>
  <Button
    customStyles={
      Object {
        "backgroundColor": "#a6a7aa",
        "bottom": "10px",
        "height": "60px",
        "position": "fixed",
        "right": "10px",
      }
    }
    onClick={[Function]}
  >
    <PlusIcon />
  </Button>
</styled.div>
`;

exports[`List: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Card
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)>
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)>
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <IntersectIcon />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span
              isLock={false}
            >
              <CsvIcon
                customStyles={
                  Object {
                    "fill": "#1d1d20",
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span
              isLock={false}
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span
              isLock={false}
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span
              isLock={false}
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span
              isLock={false}
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Card>
    </styled.li>
  </styled.div>
  <Button
    customStyles={
      Object {
        "backgroundColor": "#a6a7aa",
        "bottom": "10px",
        "height": "60px",
        "position": "fixed",
        "right": "10px",
      }
    }
    onClick={[Function]}
  >
    <PlusIcon />
  </Button>
</styled.div>
`;

exports[`List: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div />
  <Button
    customStyles={
      Object {
        "backgroundColor": "#a6a7aa",
        "bottom": "10px",
        "height": "60px",
        "position": "fixed",
        "right": "10px",
      }
    }
    onClick={[Function]}
  >
    <PlusIcon />
  </Button>
</styled.div>
`;
